--- a/article/references.bib
+++ b/article/references.bib
@@ -575,3 +575,14 @@
   doi     = {10.1016/j.spl.2014.04.003},
   url     = {https://doi.org/10.1016/j.spl.2014.04.003}
 }
+
+@article{Wills2021,
+  author  = {Wills, Adrian G. and Schön, Thomas B.},
+  title   = {Stochastic quasi-Newton with line-search regularisation},
+  journal = {Automatica},
+  volume  = {127},
+  pages   = {109503},
+  year    = {2021},
+  issn    = {0005-1098},
+  doi     = {10.1016/j.automatica.2021.109503}
+}
