--- a/article/ms.qmd
+++ b/article/ms.qmd
@@ -53,6 +53,8 @@ bibliography: references.bib
 header-includes:
   - \usepackage{algorithm}
   - \usepackage{algpseudocode}
+  - \usepackage{xcolor}
+  - \newcommand{\note}[1]{\textcolor{blue}{\textsf{[#1]}}}
 ---
 ```{python}
 #| label: os
@@ -72,46 +74,47 @@ import jax
 
 
 ## Introduction
-[Topic] Partially Observable Markov Process (POMP) models, also known as state-space models or hidden Markov models, provide a flexible and mechanistic framework for modeling time-series dynamic systems, particularly suited for scenarios where latent states are only partially observable. Characterized by transition densities and measurement densities of Markov processes, this framework bridges complex underlying dynamics with limited information in real-world data. Consequently, POMP models find extensive application in epidemiology [@Mietchen2024; @Fox2022; @Wen2024], ecology [@AugerMethe2021; @Marino2019; @Blackwood2013], finance [@Breto2014], and other domains.
+\note{Topic} Partially Observable Markov Process (POMP) models, also known as state-space models or hidden Markov models, provide a flexible and mechanistic framework for modeling time-series dynamic systems, particularly suited for scenarios where latent states are only partially observable. Characterized by transition densities and measurement densities of Markov processes, this framework bridges complex underlying dynamics with limited information in real-world data. Consequently, POMP models find extensive application in epidemiology [@Mietchen2024; @Fox2022; @Wen2024], ecology [@AugerMethe2021; @Marino2019; @Blackwood2013], finance [@Breto2014], and other domains.
 
-[Existing package discussion] The rich POMP package ecosystem built in `R` has provided a solid, standardized, and extensible framework for modeling time series data using nonlinear, stochastic partially observed mechanism dynamic models. The `R pomp` package has become a well-established tool for fitting POMP models using a general and abstract representation, that supports multiple inference techniques. Its extension packages `panelPomp`, `spatpomp`, and `phyloPomp` further enhance its capabilities for panel, spatio-temporal and phylodynamic data analysis respectively
+\note{Existing package discussion} The rich POMP package ecosystem built in `R` has provided a solid, standardized, and extensible framework for modeling time series data using nonlinear, stochastic partially observed mechanism dynamic models. The `R pomp` package has become a well-established tool for fitting POMP models using a general and abstract representation, that supports multiple inference techniques. Its extension packages `panelPomp`, `spatpomp`, and `phyloPomp` further enhance its capabilities for panel, spatio-temporal and phylodynamic data analysis respectively
 
-[computational challenges + potential limitations] While conceptually powerful, statistical inference for POMP models using the above `R` packages poses substantial computational challenges. From a methodological perspective, likelihood-based inference for POMP models typically relies on perturbations within iterated filtering (adding ref related to iterative filtering) algorithms. While many of them are stable and effective in locating a neighborhood containing the likelihood maximum, they exhibit numerical inefficiency for obtaining a precise identification of the maximum value. Particularly, when the latent states are high-dimensional or when repeated model evaluations are required, the fitting process could be computationally prohibitive by the constraints. 
+\note{computational challenges & potential limitations} While conceptually powerful, statistical inference for POMP models using the above `R` packages poses substantial computational challenges. From a methodological perspective, likelihood-based inference for POMP models typically relies on perturbations within iterated filtering (adding ref related to iterative filtering) algorithms. While many of them are stable and effective in locating a neighborhood containing the likelihood maximum, they exhibit numerical inefficiency for obtaining a precise identification of the maximum value. Particularly, when the latent states are high-dimensional or when repeated model evaluations are required, the fitting process could be computationally prohibitive by the constraints. 
 
 On the other hand, these POMP models have demonstrated strong potential to be sped up considerably. Many of the processes are embarassingly parallel, such as simulating the state process for each of thousands of particles, running the particle filter multiple times for the same parameter set, and running iterated filtering from multiple starting parameter sets, especially when estimating a profile likelihood to construct a confidence interval as per [@ionides2017]. Graphics Processing Units (GPUs) are well-suited for such operations. However, the existing family of POMP packages (**pomp**, **panelPomp**, and **spatPomp** [@king2016,@breto2025,@asfaw2024]) only runs on CPUs.
 
-[introducing AD/GPU/JAX + pypomp] As the demand grows for scalable and parallelizable inference algorithms, there is a increasing need for a accelerated POMP modeling framework. Automatic differentiation (AD) is a technique that enables efficient and accurate computation of numerical differentiation by systematically applying the chain rule to fundamental operations within computer programs. While several general-purpose AD libraries are available, we directly integrate AD technique into the inference of generic POMP models, particularly the particle filter. This leads to a novel class of algorithms, which are termed automatic differentiation particle filters (ADPF) for POMP modls. The ADPF and differentiable iterated filtering interfaces enable the gradient-based optimization, effectively resolving the previous numerous inefficiencies in the traditional algorithms. Our approach maintains the plug-and-play property [@ionides2006], allowing users to specify dynamic models solely through simulators that generate latent state trajectories between arbitrary time points. Furthermore, these methods are implemented in JAX[@bradbury2018], a high-performance numerical computing library that supports hardware acceleration (GPU) and vectorization. JAX's just-in-time (JIT) compilation further accelerates inference. With the combination of ADPF methods, JAX implementation, and GPU hardware supports, instead of merely a port from the `R` package `pomp`, `pypomp`[@abkemeier2024] establishes a modern platform for POMP modeling. 
+\note{introducing AD/JIT/GPU hardware + pypomp} As the demand grows for scalable and parallelizable inference algorithms, there is an increasing need for an accelerated framework for POMP modeling framework. `pypomp`[@abkemeier2024] addresses this by tightly integrating **automatic differentiation (AD)**, **just-in-time (JIT) compilation**, and **GPU/TPU accelaration** through JAX [@bradbury2018], a high-performance numerical computing library that supports hardware accelation and vectorization. AD techniques enable efficient and accurate derivative computation by systematically applying the chain rule to fundamental operations. Recent work has extended AD to the particle filtering, yielding a class of methods termed automatic differetiation particle filters (ADPF). Building on these advancements, `pypomp` provides AD-enabled gradient estimation for likelihood maximization algorithms within a plug-and-play framework [@ionides2006], where users specify dynamic models solely through simulators of latent state trajectories. JAX's JIT compilation further accelerates repeated inference and evaluation by converting Python functions into machine code at runtime. Finally, JAX's GPU/TPU support enables efficient scaling of inference methods. Together, these features make `pypomp` more than a port of the `R` package `pomp`. Instead, it established an independent, modernized platform for fast and flexible POMP modeling in Python.
 
 [structure]
 The remainder of this paper is organized as follows. Section 2 discusses the Motivation for `pypomp` design using specific examples. Section 3 demonstrates the mathematical notation for POMP models and their related implementation in `pypomp`. Section 4 introduces the embedded methodologies. Section 5 presents data analysis workflows and benchmarking results. Section 6 concludes with a discussion of future directions.
 
-[NOTE key points for introduction section: add discussion of panelpomp]
+\note{add discussion of panelpomp into introduction}
 
 
-# Motivation for pypomp
+## Motivation for pypomp
 
-**NOTE: This section is for some extra detailed numeric cost estimates and dataset descriptions to illustrate motivation based on Aaron's draft. It is a bit redundant now.**
+\note{This section is for some extra detailed numeric cost estimates and dataset descriptions to illustrate motivation based on Aaron's draft. It is a bit redundant now.}
 
-## Real-world computational bottleneck
+
+### Real-world computational bottleneck
 
 Computational speed is a major bottleneck in the practical application of iterated filtering methods to POMP models. 
 In @korevaar2020 ‘s dataset, fitting and evaluating likelihoods of POMP models for 180 units required 8 days on 36 CPU cores (two 3.0 GHz Intel Xeon Gold 6154 CPUs). Scaling this up to the full dataset of 1422 units would require almost eight times as much effort, equivalent to running 36 cores for two months or 288 cores for 8 days. This is not only time consuming, but also incurs substantial computational costs, highlighting the urgent need for more efficient inference software for large-scale POMP analyses Importantly, this cost only accounts for one round of iterated filtering. In practice, to further refine the likelihood estimates, multple rounds are required, which would increase the computational burden significantly. This motivates the development of accelerated, scalable tools to make large-scale POMP inference feasible.
 
-## Opportunities for speeding up the POMP models
+### Opportunities for speeding up the POMP models
 
 Many of the processes involved in fitting POMP models are embarrassingly parallel. Examples include simulating the state process for each of thousands of particles, running the particle filter repeatedly under the same parameter set, and executing iterated filtering from multiple starting parameter sets. Such parallelism is especially advantageous when estimating a profile likelihood to construct confidence intervals [@ionides2017]. Harnessing parallel computing resources can therefore dramatically reduce computation time and make large-scale inference feasible. 
 
 Graphics Processing Units (GPUs) are well-suited for embarrassingly parallel operations, but the existing family of POMP packages (**pomp**, **panelPomp**, and **spatPomp** [@king2016,@breto2025,@asfaw2024]) are limited to CPU computation. None provide support for GPU acceleration or automatic differentiation. These two technologies are key to enabling scalable and efficient inference for modern POMP applications.
 
-## Our solution: pypomp
+### Our solution: pypomp
 
 To address this computational bottleneck, we are creating `pypomp`[@abkemeier2024], a python implementation of the `R` package `pomp`. It draws inspiration from `pomp`, but further implements new methods incoporating automatic differentiation techniques by forking the source code used in Tan [@tan2024], as well as leverages JAX's just-in-time(JIT) compilation and GPU core parallelization [@bradbury2018], allowing practitionersto run filtering methods significantly faster and cheaper. For example, in an SPX comparison model, we show that, compared to `pomp` with 36 CPU cores, `pypomp` can run at least 7 times faster and can finish the job at 5\% of the price using 1 GPU and 1 CPU core (5120 CUDA cores on a NVIDIA Tesla V100 and one core from a 2.4 GHz Intel Xeon Gold 6148 CPU). 
 
 In addition, `pypomp` is gradually including functionality from `panelPomp` and `spatPomp`, offering a unified Python interface for entire POMP methodologies across multiple `R` packages. It also takes advantage of JAX's implementation of automatic differentiation (AD), which can be used in conjunction with the differentiable measurement off-parameter with discount factor $\alpha$ (MOP-$\alpha$) particle filter to improve local optimization of the likelihood surface [@tan2024].
 
-## Summary of key features
+### Summary of key features
 
-@tbl-feature_comparison summarizes the main differences between `pypomp` and `pomp`, highlighting the new capabilities of `pypomp`. 
+@tbl-feature_comparison summarizes the main differences between `pypomp` and `pomp`, highlighting the new capabilities of `pypomp`.  
 
 ::: {#tbl-feature_comparison}
 Table: Feature comparison between `pypomp` and `pomp` in R ecosystem.
@@ -130,7 +133,7 @@ This section introduces the structure of POMP models and its implementation in `
 
 ## Model setup
 
-A **partially observed Markov process (POMP)** model has two main components: (i) a latent Markov process that evolves over time and (ii) an observation process that links the latent states. Together, these jointly specify the mechanistic model for the observed time series, providing a framework for modeling dynamic systems where measurements are noisy. Formally, suppose we observe the process at discrete time $n=1,\dots,N$, with initial time $0$. Let $\{Y_n\}_{n=1}^N$ denote the observations and $\{X_n\}_{n=0}^N$ denote the corresponding latent (unobserved) Markov process at the corresponding time.  A POMP model is defined by three building components, each corresponding to user-supplied Python functions in `pypomp`:
+A **partially observed Markov process (POMP)** model has two main components: (i) a latent Markov process that evolves over time and (ii) an observation process that links the latent states. Together, these jointly specify the mechanistic model for the observed time series, providing a framework for modeling dynamic systems where measurements are noisy. Formally, suppose we observe the process at discrete time $n=1,\dots,N$, with initial time $0$. Let $Y_{1:N}$ denote the observations and $X_{0:N}$ denote the corresponding latent (unobserved) Markov process at the corresponding time.  A POMP model is defined by three building components, each corresponding to user-supplied Python functions in `pypomp`:
 
 1. initial density: $f_{X_0}(x_0; \theta)$, implemented via `rinit`, generates draws of the initial states $X_0$. 
 2. transition density: $f_{X_n|X_{n-1}}(x_n \mid x_{n-1}; \theta)$, implemented via `rproc`, propagates the evolution of latent states.
@@ -149,12 +152,12 @@ The marginal likelihood of the observations is $\mathcal{L}(\theta) = f_{Y_{1:N}
 
 A POMP model in `pypomp` is represented as an object of class `Pomp`, which encapsulates the model components: the initial state distribution, process model, and measurement model. This object-oriented interface allows users to specify by passing components to the constructor, including observations, model parameters, model mechanics such as simulators and the measurement density, covariates, and times. After the components are passed into the constructor, the constructor automatically generates additional internal elements, such as extended observations and covariates required for interpolation
 
-@tbl-pomp_comps summarizes the main arguments to the Pomp constructor and their correspondence to mathematical objects
+@tbl-pomp_comps summarizes the main arguments to the Pomp constructor and their correspondence to mathematical objects. `RInit`, `RProc` and `RMeas` are the subconstructors, where they specify the stochastic mechanisms that definie a `Pomp` model, and their objects are passed as arguments when initializing a mian `Pomp` class. 
 
 ::: {#tbl-pomp_comps}
 Table: Main arguments to the `Pomp` class and related constructor objects.
 
-| Constructor | Argument   | Type               | Description / Mathematical representation |
+| Constructor/Sub-constructor | Argument   | Type               | Description / Mathematical representation |
 |-------------|------------|--------------------|-------------------------------------------|
 | **Pomp**    | `rinit`    | `RInit`            | simulate initial states $X_0 \sim f_{X_0}(x_0;\theta)$ |
 |             | `rproc`    | `RProc`            | simulate state transitions $X_n \sim f_{X_n\mid X_{n-1}}(x_n\mid x_{n-1};\theta)$ |
@@ -333,13 +336,12 @@ A key design choice `pypomp` is it relys heavily on the JAX numerical backend. U
 
 Later section will demonstrate how the JAX-based design supports further inference methods.
 
-[Question: more introductions on JAX?]
+\note{more introduction to JAX?}
 
 ### Panel POMP class
 
 
-# POMP Methods in pypomp
-
+## POMP Methods in pypomp
 In this section, we describe the core inference methods currently implemented in `pypomp`, including : 
 
 - `Paricle Filter` (Sequential Monte Carlo, written in `pfilter()`): A standard sequential Monte Carlo algorithm for likelihood evaluation and state estimation, forming the basis for most inference methods in POMP models.
@@ -351,7 +353,7 @@ A key feature of the above POMP inference methods lies in the **plug-and-play pr
 
 In `pypomp`, the plug-and-play design is fully preserved: users only need to provide component functions compliant with JAX requirements, which can be directly plugged in inference methods like`pfilter()`, `mop()`, `mif()`, and `train()`. The package combines the generality of plug-and-play modeling with the efficiency of JAX compilation and vectorization.
 
-Unlike the R family of POMP packages, some `Pomp` class methods including `pfilter()`, `mif()` and `train()` yield results by modifying the object in place instead of returning new objects. All of results are stored a list under `LG_obj.results_history`, which is an attibute under `Pomp` class object `LG_obj`. Each element in the list correponds to one method call. Each element includes results such as the log-likelihood and parameter estimates when applicable as well as the inputs used for the function call, so it is easy to keep track of how the results were calculated. If multiple parameter sets are supplied in a list as an argument, the method evaluates at each set and the results for each are stored. 
+Unlike the R family of POMP packages, some `Pomp` class methods including `pfilter()`, `mif()` and `train()` yield results by modifying the object in place instead of returning new objects. All of results are stored a list under `LG_obj.results_history`, which is an attibute under `Pomp` class object `LG_obj`. Each element in the list correponds to one method call. Each element includes results such as the log-likelihood and parameter estimates when applicable as well as the inputs used for the function call, so it is easy to keep track of how the results were calculated. If multiple parameter sets are supplied in a list as an argument, the method evaluates at each set and the results for each are stored. Meanwhile, each following method in `pypomp` that takes a key as an argument stores an unused child key under `LG_obj.fresh_key` that later method calls can use by default when a key argument is not given. This design prevents repeated use of the same key across a sequence of method calls and ensures proper randomness.
 
 ```{python}
 #| label: lg-output
@@ -371,9 +373,9 @@ print(LG_obj.results_history)
 
 ```
 
-## Particle Filter (pfilter)
+### Particle Filter (pfilter)
 
-**NOTE**: 1. purpose/role 2. implementation details in pypomp 3. outputs/results 4. remarks/highlights 
+\note{outline: 1. purpose/role 2. implementation details in pypomp 3. outputs/results 4. remarks/highlights}
 
 The particle filter algorithm (sequential Monte Carlo, SMC) (@arulampalam2002, @king2016) is the core classical likelihood evaluation tool in POMP model inference. It uses Monte Carlo techniques to sequentially estimate the integrals in the prediction and filtering recursions, and produce an unbiased Monte Carlo estimate of the likelihood of the observed data under a parameter set. The likelihood estimate is essential for other parameter inference algorithms such as iterative filtering. In `pypomp`, the basic particle filter is implemented under `pfilter()`. The algorithm is summarized as Algerithm \ref{alg:smc},
 
@@ -450,13 +452,13 @@ Meanwhile, `LG_obj_2.results_history[1]` also contains the following items that 
 - `filter_mean`: An `xarray.DataArray` containing the filtered mean over observed time steps (`theta`, `replicate`, `time`, `state`)
 - `prediction_mean`: An `xarray.DataArray` containing the prediction mean over observed time steps. (`theta`, `replicate`, `time`, `state`) 
 
-
 A key design is that all runs across multiple parameter sets and replications are stored in one `results_history` list under the corresponding `Pomp` object. This avoids object duplication, and increases reproducibility by facilitating pickling `Pomp` objects obtained from many different search strategies, loading them into a new Python session, and then comparing the results to see how they vary with different algorithmic parameters.
 
 
 
-## Measurement Off-Parameter (MOP)
-The measurement off-parameter-\alpha paricle filter (MOP-$\alpha$) algorithm [@tan2024]. It is a variant of the standard vanilla particle filter aiming to produce differentiable likelihood estimate with respect to the model parameters. More spcifically, it evaluates the likelihood at the target evaluation parameter $\theta$ and resamples the particles with the indices generated by the vanilla particle filter at another baseline behavior parameter $\phi$. This makes the Monte Carlo resampling process independent of the target evaluation parameter $\theta$, enabling the differentiability of the algorithm, and the further utlization of automatic differentiation and gradient descent. There is a discount factor $\alpha \in [0,1]$, which controls the bias-variance tradeoff of the gradient estimator. The likelihood estimate is essential for other parameter inference algorithms such as iterated filtering with automatic differentiation (IFAD), where it employs stochastic gradient descient to MOP. In `pypomp`, the MOP is implemented under `mop()`. The pseudocode is shown in \ref{alg:mop}. 
+### Measurement Off-Parameter (MOP)
+The measurement off-parameter-\alpha paricle filter (MOP-$\alpha$) algorithm [@tan2024]. It is a variant of the standard vanilla particle filter aiming to produce differentiable likelihood estimate with respect to the model parameters. To solve the issue that random resampling of particles in the classical particle filtering is normally discontinuous with respect to $\theta$, it evaluates the likelihood at the target evaluation parameter $\theta$ and resamples the particles with the indices generated by the vanilla particle filter at another baseline behavior parameter $\phi$. This makes the Monte Carlo resampling process independent of the target evaluation parameter $\theta$, enabling the differentiability of the algorithm, and the further utlization of automatic differentiation and gradient descent. There is a discount factor $\alpha \in [0,1]$, which controls the bias-variance tradeoff of the gradient estimator. The likelihood estimate is essential for other parameter inference algorithms such as iterated filtering with automatic differentiation (IFAD), where it employs stochastic gradient descient to MOP. In `pypomp`, the MOP is implemented under `mop()`. The pseudocode is shown in \ref{alg:mop}. 
+
 
 \begin{algorithm}[H]
 \caption{MOP($\alpha$), Measurement off-policy sequential Monte Carlo}
@@ -528,13 +530,14 @@ LG_obj_3.mop(J = 1000,
 
 Generally, the `result_history` only updates: 
 
-- list of `jax.Array`: The estimated log-likelihood(s) of the observed data given the model
-  parameters. Always a list, even if only one theta is provided.
+- log-likelihood(s): a list of `jax.Array` containing the estimated log-likelihood(s) of the observed data given the model parameters. Always a list, even if only one theta is provided.
 
 This design highlights `mop()` as a lightweight but essential building block for accelarated gradient-based inference methods within `pypomp`.
 
 
-## Iterated Filtering
+### Iterated Filtering
+
+Iterated filtering (IF2) provides a Monte Carlo approach to estimate parameters by combining particle filtering with sequential random-walk perturbations and cooling. Compared with a plain particle filter or MOP method, IF2 not only evaluates the likelihoods but also systematically updates parameters across iterations. Its primary role is to estimate the parameters that maximizes the likelihood, given the likelihood is intractable but can be estimated under the particle filtering methods. The pseudocode for IF2 algorithm is as follows: 
 
 \begin{algorithm}[H]
 \caption{Iterated Filtering (IF2)}
@@ -563,8 +566,53 @@ This design highlights `mop()` as a lightweight but essential building block for
 \end{algorithmic}
 \end{algorithm}
 
+Under `pypomp`, the IF2 is implemented under `mif()`. Arguments `sigmas` and `sigmas_init` control the random walk standard deviation after and during time $t_0$ respectively. Another argument `a`, the cooling rate, reduces the perturbation magnitudes across iterations. The purturbations controlled by `sigmas`, `sigmas_init`, and `a` enable the `POMP` model to explore the parameter space and progressively converge to the optimal parameter estimates. Specifically, each call also updates and stores a child key into `LG_obj.fresh_key`, so subfequent method calls can safely omit an explicit assignment on `key` argument. 
 
-## Iterated Firltering with Automatic Differentiation 
+Different from previous methods for evaluating the likelihoods, `Pomp` methods such as `mif()` can update attributes directly other than `resuts_history`. The `LG_obj.mif()` replaces `LG_obj.theta` with the parameter estimate from the end of the last iteration. The traces of log-likelihoods and parameter estimates are stored in `LG_obj.results_history` as a `xr.DataArray` object. The `xr.DataArray` has dimentions `(replicate, iteration, variable)`, where the `variable` dimension includes the log-likelihood estimations and all POMP model parameters. 
+
+
+:
+```{python}
+#| label: lg-mif
+#| echo: true
+
+key, subkey = jax.random.split(key)
+
+#LG_obj_4 = pp.Pomp(
+ #   rinit=rinit,
+ #   rproc=rproc,
+ #   dmeas=dmeas,
+ #   rmeas=rmeas,
+ #   ys=ys,
+ #   theta=theta_list,
+ #   covars=None,
+#)
+#LG_obj_4.mif(
+  #sigmas=0.02,
+  #sigmas_init=0.1,
+  #J=1000,
+  #M=100,
+  #a=0.5, # cooling rate
+  #key=subkey
+#)
+#LG_obj_4.pfilter(J=1000, reps=36)
+#LG_obj_4.mif(
+	#sigmas=0.005,
+	#sigmas_init=0.0025,
+	#J=1000, 
+	#M=100, 
+	#a=0.5,
+#)
+#LG_obj_4.pfilter(J=1000, reps=36)
+
+
+```
+
+The `pypomp` implementation of IF algorithm in `mif()` inherits the structure of R's `pomp` package while adding JAX compilation, providing a substantial performance improvements over R implementation.
+
+### Iterated Filtering with Automatic Differentiation 
+
+Iterated filtering with automatic differentiation (IFAD) [@tan2024] is a hybrid method that combines the complementary advanrages of iterated filtering (IF2) and a new proposed MOP-$\alpha$ gradient method. Here by using the differentiable particle filter, the MOP-$\alpha$ gradient method can obtain gradient and Hessian estimates of the log-likelihood of a POMP model. These estimates are involved in an optimization method to perform a gradient-based search in the parameter space.  While IF2 can quickly approach the neighborhood of the global maximum, it struggles to achieve exact local convergence to the global maximum. It can take dozens of iterations to partially close the log-likelihood gap between a point in the neighborhood and the actual global maximum. In contrast, the new MOP-$\alpha$ gradient method can conduct a fast and strong local search, but shows weaker ability at conducting a global exploration [@tan2024]. IFAD addresses this tradeoff by first running IF2 to approach the neighborhoold of the global maximum, and then swithcing to the gradient-based method to further refine the parameter estimates. **NOTE:Global Maximum or Local Maximum?**
 
 \begin{algorithm}[H]
 \caption{IFAD: Iterated Filtering with Automatic Differentiation}
@@ -590,7 +638,48 @@ This design highlights `mop()` as a lightweight but essential building block for
 \end{algorithmic}
 \end{algorithm}
 
+In `pypomp`, the MOP-$\alpha$ gradent local search is implemented under `train()`, which utilizes JAX's automatic differentiation features with MOP-$\alpha$ to compute the gradient and Hessian of the log-likelihood. While IFAD is not implemented as an independent function, users can always run `mif()` and `train()` to execute the two phases sequentially. For example: 
 
+```{python}
+#| label: lg-ifad
+#| echo: true
+
+key, subkey = jax.random.split(key)
+#LG_obj_5 = pp.Pomp(
+#    rinit=rinit,
+#    rproc=rproc,
+#    dmeas=dmeas,
+#    rmeas=rmeas,
+#    ys=ys,
+#    theta=theta_list,
+#    covars=None,
+#)
+#LG_obj_5.mif(
+#	sigmas=0.02,
+#	sigmas_init=0.1,
+# J=1000, 
+#	M=40, 
+#	a=0.5,
+#	key=subkey
+#)
+#LG_obj_5.train(
+#    J=1000, 
+#    itns=40, 
+#    eta=0.0025, # learning rate
+#    optimizer="Newton"
+#)
+
+```
+
+Here, `mif()` runs IF2 for 40 iterations, followed by `train()` runs the Newton's method with MOP-$\alpha$ for 40 iterations.
+
+The implemented function `train()` serves as a gradient-based optimizer for exploring the parameter space. Each iteration follows the standard optimization working flow: starting from the current parameter estimate, it computes gradient (and Hessian) of the log-likelihood via `jax.grad()` and `jax.Hessian()`, then utilizes the choosen internal optimizer to update the direction, obtains the learning rate, and finally updates the parameters as well as evaluates the new likelihood under the updated parameters. `train()` supports several common gradient-based optimizers for exploring the parameter space, including Newton's method, weighted Newton's method, Broyden-Fletcher-Goldfarb-Shanno (BFGS) algorithm, and gradient descent method. In addition, A linear search method [@Wills2021] is available under `train` for determining the learning rate (step size) under stochastic Quasi-Newton methods. 
+
+In `train()`, there is a key argument `n_monitors`, controlling the number of log-likelihood values are evaluated during each training step. When setting `n_monitors=0`, the algorithm totally skip the evaluating process and conduct the gradient-only optimization. It is the fastest choice, but doesn't support the linear search method for learning rate determination, as it utilizes the estimated log-likelihood as the current objective function value. `n_monitors=1` is a lightest monitoring form, where users can get a one log-likelihood evaluation per training step. Larger `n_monitors` reduces the log-likelihood estimate variance in particle filtering using Monte Carlo average at additional computational cost. There is another useful Boolean flag, `scale`, which controls whether the search direction is normalized to unit length. A normalized search direction can provide a more conservative update when the gradients or Hessians are unstable. 
+
+Similarly to `mif()`, `train()` updates the `result_history` with the trace of log-likelihoods and parameter estimates as `xr.DataArray` object, and replaces `LG_obj.theta` with the final parameter estimates from the last iteration for each replicate, organized as distionaries keyed by parameter names. The `xr.DataArray` has dimentions `(replicate, iteration, variable)`. The `variable` dimension includes the log-likelihood estimations and all POMP model parameters. 
+
+The core highlight of IFAD in algorithmic implementation lies in its internal automatic differentiation and just-in-time compilation powered by JAX. Via JAX, gradients and Hessian matrices for the MOP-$\alpha$ log-likelihood function can be directly obtained without manual derivation, ensuring correctness, efficiency and operability. This also enables flexible use of advanced gradient-based optimizers in each training step, such as Newton's method, quasi-Newton methods, BFGS, gradient descent and stochastic line search. Additionally, JAX's GPU compilation capabilities enable these optimization processes to execute efficiently, making IFAD not only theoretically feasible but also capable of effectively handling large complex POMP models in practical algorithmic implementations.
 
 
 # Data Analysis with pypomp / Tutorials and data analysis examples
